Sync all content

--- a/content/resources/doc2024.md
+++ b/content/resources/doc2024.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: 'Lecture 1: Basics'
 file: /courses/15-615-law-for-the-entrepreneur-and-manager-spring-2003/7823ed587a2620e582c4a4bf277e289c_doc2024.pdf
+file_size: 450325
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
