--- a/content/resources/15-615s03-th.md
+++ b/content/resources/15-615s03-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: New image Upload
 file: /courses/15-615-law-for-the-entrepreneur-and-manager-spring-2003/9f6ec94b161f7c849b3712900b1fdda5_15-615s03-th.jpg
+file_size: 9780
 file_type: image/jpeg
 image_metadata:
   caption: The U.S. Supreme Court. (Courtesy of [The Supreme Court Fellows Program](http://www.supremecourt.gov/fellows/default.aspx).)
