--- a/content/resources/doc3026.md
+++ b/content/resources/doc3026.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: 'Lecture 2: Torts, cont.'
 file: /courses/15-615-law-for-the-entrepreneur-and-manager-spring-2003/e4b37c8e50e48d2e5acc8d71b07e0228_doc3026.pdf
+file_size: 277531
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
