--- a/content/resources/doc40213.md
+++ b/content/resources/doc40213.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: 'Lecture 3: Hard Edge of Regulation, cont.'
 file: /courses/15-615-law-for-the-entrepreneur-and-manager-spring-2003/031440a13192258cb3ed4d8e50dc8033_doc40213.pdf
+file_size: 364290
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
